# reductor

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in
scratch/: agent.py  examples.py  examples_old.py  wikitionary.py  wordnet.py
src/reductor/: __init__.py  logging.py  trainer.py
src/reductor/agents/: __init__.py  base.py  classifier.py  models.py
src/reductor/prompts/: binary_classifier.jinja2  boi_tagger.jinja2  multiclass_classifier.jinja2  multilabel_classifier.jinja2
